Prevent flicker, improved success msg

--- a/assets/themes/twitter/theme.less
+++ b/assets/themes/twitter/theme.less
@@ -92,6 +92,10 @@ footer {
   }
 }
 
+[ng-cloak], .ng-cloak {
+  display: none;
+}
+
 .navbar-inner {
   #gradient > .vertical(@navbarBackgroundHighlight, @navbarBackground);
   .border-radius(0px);
